--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,15 @@
     },
     "require": {
         "php": "^5.6|^7|^8",
+        "moneyphp/money": "^3.1",
         "php-http/client-implementation": "^1",
-        "php-http/message": "^1.5",
-        "php-http/discovery": "^1.2.1",
+        "php-http/discovery": "^1.6",
+        "psr/http-client": "^1",
+        "psr/http-client-implementation": "^1",
+        "psr/http-factory": "^1",
+        "psr/http-factory-implementation": "^1",
         "symfony/http-foundation": "^2.1|^3|^4|^5",
-        "moneyphp/money": "^3.1"
+        "nyholm/psr7": "^1"
     },
     "require-dev": {
         "clembet/omnipay-tests": "^3",
